refresh project readme